--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         
                             <div class="logo-header mostion">
                                 <a href="index.html">
-                                    <img src="images/logo/logo-light.pn" width="230" height="67" alt="" />
+                                    <img src="images/logo/logo-light.png" width="230" height="67" alt="" />
                                 </a>
                             </div>
                             
