--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                                 </div>
                                 
                                 <ul class="list-unstyled e-p-bx pull-right">
-                                    <li><a href="http://user.munarcloud.com/user/login" ><i class="fa fa-user"></i>Login</a></li>
-                                    <li><a href="https://user.munarcloud.com/user/register" ><i class="fa fa-sign-in"></i>Start mining</a></li>
+                                    <li><a href="http://user.btcminings.org/user/login" ><i class="fa fa-user"></i>Login</a></li>
+                                    <li><a href="https://user.btcminings.org/user/register" ><i class="fa fa-sign-in"></i>Start mining</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -2189,7 +2189,6 @@ This is just incredible and just when I think its good enough, it just keeps get
 .notification_inner h3,
 .notification_inner p {
     color:#fff;
-    width: 400px;
     
 }
 .spop .spop-close {
