--- a/navbar.html
+++ b/navbar.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="images/logo/btc.png" alt="">
+        </div>
+        <div class="navbar">
+            <ul class="menu">
+                <li>HOME</li>
+                <li>ABOUT</li>
+                <li>MINING PLANS</li>
+                <li>CONTACT US</li>
+                <li>FAQ</li>
+            </ul>
+            <ul class="otheroption">
+                <li>Start mining</li>
+                <li>Log in</li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
