--- a/file/G_/uploading-item/bitinvest-html-template/html/images/main-page-pic/btn-wrap-bg-dark.html
+++ b/file/G_/uploading-item/bitinvest-html-template/html/images/main-page-pic/btn-wrap-bg-dark.html
@@ -2,7 +2,7 @@
 <html>
 <!-- Mirrored from www.finsofx.com/file/G_/uploading-item/bitinvest-html-template/html/images/main-page-pic/btn-wrap-bg-dark.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 10 Dec 2020 13:41:05 GMT -->
 
-<!-- Mirrored from munarcloud.com/file/G_/uploading-item/bitinvest-html-template/html/images/main-page-pic/btn-wrap-bg-dark.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Aug 2024 14:03:32 GMT -->
+<!-- Mirrored from btcminings.online/file/G_/uploading-item/bitinvest-html-template/html/images/main-page-pic/btn-wrap-bg-dark.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Aug 2024 14:03:32 GMT -->
 <head>
 <title>404 Not Found</title>
 </head><body>
@@ -13,5 +13,5 @@ error was encountered while trying to use an ErrorDocument to handle the request
 </body>
 <!-- Mirrored from www.finsofx.com/file/G_/uploading-item/bitinvest-html-template/html/images/main-page-pic/btn-wrap-bg-dark.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 10 Dec 2020 13:41:05 GMT -->
 
-<!-- Mirrored from munarcloud.com/file/G_/uploading-item/bitinvest-html-template/html/images/main-page-pic/btn-wrap-bg-dark.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Aug 2024 14:03:32 GMT -->
+<!-- Mirrored from btcminings.online/file/G_/uploading-item/bitinvest-html-template/html/images/main-page-pic/btn-wrap-bg-dark.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Aug 2024 14:03:32 GMT -->
 </html>
