--- a/css/owl.video.play.html
+++ b/css/owl.video.play.html
@@ -5,7 +5,7 @@
 
 <!-- Mirrored from www.finsofx.com/css/owl.video.play.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 10 Dec 2020 13:41:05 GMT -->
 
-<!-- Mirrored from munarcloud.com/css/owl.video.play.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Aug 2024 14:03:32 GMT -->
+<!-- Mirrored from btcminings.online/css/owl.video.play.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Aug 2024 14:03:32 GMT -->
 <head>
 <title>File Not Found</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
@@ -93,5 +93,5 @@ a {
 
 <!-- Mirrored from www.finsofx.com/css/owl.video.play.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 10 Dec 2020 13:41:05 GMT -->
 
-<!-- Mirrored from munarcloud.com/css/owl.video.play.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Aug 2024 14:03:32 GMT -->
+<!-- Mirrored from btcminings.online/css/owl.video.play.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Aug 2024 14:03:32 GMT -->
 </html>
