--- a/images/favicon.html
+++ b/images/favicon.html
@@ -5,7 +5,7 @@
 
 <!-- Mirrored from www.finsofx.com/images/favicon.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 10 Dec 2020 13:39:22 GMT -->
 
-<!-- Mirrored from munarcloud.com/images/favicon.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Aug 2024 14:03:40 GMT -->
+<!-- Mirrored from btcminings.online/images/favicon.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Aug 2024 14:03:40 GMT -->
 <head>
 <title>File Not Found</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
@@ -93,5 +93,5 @@ a {
 
 <!-- Mirrored from www.finsofx.com/images/favicon.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 10 Dec 2020 13:39:22 GMT -->
 
-<!-- Mirrored from munarcloud.com/images/favicon.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Aug 2024 14:03:40 GMT -->
+<!-- Mirrored from btcminings.online/images/favicon.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Aug 2024 14:03:40 GMT -->
 </html>
