--- a/navbar.html
+++ b/navbar.html
@@ -12,12 +12,17 @@
             <img src="images/logo/btc.png" alt="">
         </div>
         <div class="navbar">
+            <input type="checkbox" name="openNav" id="openNav">
+            <label for="openNav" class="openNav">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
             <ul class="menu">
                 <li>HOME</li>
                 <li>ABOUT</li>
                 <li>MINING PLANS</li>
                 <li>CONTACT US</li>
-                <li>FAQ</li>
             </ul>
             <ul class="otheroption">
                 <li>Start mining</li>
